kustomize/base/prometheus.ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kube-prometheus-prometheus
  namespace: prometheus
spec:
  entryPoints:
    # - websecure
    - web
  routes:
    - kind: Rule
      match: Host(`prometheus.k3s`)
      priority: 10
      services:
        - name: prometheus-kube-prometheus-prometheus
          namespace: prometheus
          port: 9090
  # tls:
  #   certResolver: le
